documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.CS

        [DllImport("L71W32.DLL", EntryPoint = "_L71_DARClr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DARClr(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DARGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DARGet(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DARRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_DARRdL(UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DARRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_DARRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DARSet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DARSet(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DARWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DARWrL(UInt32 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DARWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DARWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DescAddr@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_DescAddr(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DescAlloc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_DescAlloc(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DescConfig@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DescConfig(UInt32 configval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DescOptRd@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_DescOptRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DescOptWr@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DescOptWr(UInt16 descopt, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DescPtrRd@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_DescPtrRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DescPtrWr@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_DescPtrWr(UInt32 msgaddr, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DescRd@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_DescRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, ref UInt16 desc, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DescWr@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_DescWr(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, ref UInt16 desc, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_Div@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_Div(UInt32 diva, UInt32 divb);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DllUsageCount@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DllUsageCount();
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_DPMMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DPMMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMRdB@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_DPMRdB(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_DPMRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMRdsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DPMRdsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DPMRdsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_DPMRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMWrB@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DPMWrB(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DPMWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMWrsL@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DPMWrsL(ref UInt32 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DPMWrsW(ref UInt16 valueptr, UInt32 addrval, Int32 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DPMWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_DPMWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DspBioClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DspBioClear(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DspBioRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_DspBioRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DspBioSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DspBioSet(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DspIntfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DspIntfClear(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DspIntfRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DspIntfRead(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DspIntmClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DspIntmClear(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DspIntmSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DspIntmSet(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DspXfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DspXfClear(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_DspXfSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_DspXfSet(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ErrDesc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _L71_ErrDesc(Int32 errval);
        public static string L71_ErrDesc(Int32 errval) { return Marshal.PtrToStringAnsi(_L71_ErrDesc(errval)); }
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ErrDescStr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _L71_ErrDescStr(Int32 errval);
        public static string L71_ErrDescStr(Int32 errval) { return Marshal.PtrToStringAnsi(_L71_ErrDescStr(errval)); }
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ErrName@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _L71_ErrName(Int32 errval);
        public static string L71_ErrName(Int32 errval) { return Marshal.PtrToStringAnsi(_L71_ErrName(errval)); }
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ErrorDefine@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ErrorDefine(Int32 busb, UInt16 intfreq, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ExtDinRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ExtDinRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ExtDinWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_ExtDinWr(Int32 dinval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ExtDoutRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_ExtDoutRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_ExtDoutWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_ExtDoutWr(Int32 doutval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FileClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_FileClose(IntPtr handle);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FileErr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_FileErr();
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FileErrClr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_FileErrClr();
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FileErrSet@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_FileErrSet();
        [DllImport("L71W32.DLL", EntryPoint = "_L71_FileOpenRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* L71_FileOpenRead(ref string filename);
